feat: Create ms golang version, update ms java version and updated swagger
