# ms-java/src/main/java/com/portoseg/users/enumeration/StatusType.java
@@ -1,5 +1,5 @@
 package com.portoseg.users.enumeration;
 
 public enum StatusType {
-    ATIVO, DESATIVADO;
+    ENABLED, DISABLED;
 }
